# esp32-nixie

./: .gitmodules  CMakeLists.txt  README.md  nixie.code-workspace  sdkconfig  sdkconfig.old
components/maag_i2c/: CMakeLists.txt  maag_i2c_device.cpp  maag_i2c_port.cpp
components/maag_i2c/include/: maag_i2c_device.h  maag_i2c_port.h
components/maag_lib/: CMakeLists.txt  maag_gpio.cpp
components/maag_lib/include/: maag_gpio.h
components/maag_spi/: CMakeLists.txt  maag_spi_device.cpp  maag_spi_host.cpp
components/maag_spi/include/: maag_spi_device.h  maag_spi_host.h
components/maag_wifi/: CMakeLists.txt  maag_sntp.cpp  maag_webserver.cpp  maag_wifi.cpp
components/maag_wifi/include/: maag_sntp.h  maag_webserver.h  maag_wifi.h
main/: CMakeLists.txt  component.mk  fb_data_acq.h  fb_hdrive.c  fb_hdrive.h  fb_nvs.c  fb_wifi.c  fb_wifi.h  index.h  maag_gpio.cpp  maag_gpio.h  maag_i2c_device.cpp  maag_i2c_device.h  maag_i2c_port.cpp  maag_i2c_port.h  maag_sntp.cpp  maag_sntp.h  maag_spi_port.cpp  maag_spi_port.h  maag_webserver.cpp  maag_webserver.h  maag_wifi.cpp  maag_wifi.h  main.c  main.cpp  neopixel.c  nixie_ds3231.cpp  nixie_ds3231.h  nixie_hv5622.cpp  nixie_hv5622.h  nixie_projdefs.h  nixie_testClass.cpp  nixie_testClass.h  nixie_time.cpp  nixie_time.h  nixie_webserver.cpp  nixie_webserver.h  ws2812_control.h
main/index/: index.css  index.html  index.js
main/legacy/: fb_data_acq.c  fb_esp_time.c  fb_esp_time.h  fb_mean_control.c  fb_mean_control.h  fb_nvs.h  fb_projdefs.h  fb_wifi_fadenbremse.c  main.c  neopixel.h  ws2812_control.c
